--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -18,4 +22,19 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+#field {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.team-card {
+  border: 1px solid black;
+  margin: 10px;
+  width: 200px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-align: left;
 }
