fixed 1st four duplicate problem

--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,10 @@ form div {
   margin-bottom: 30px;
 }
 
+.user-bracket-bubble-burst {
+  margin-top: 30px;
+}
+
 .user-page-header {
   position: relative;
   margin-bottom: 60px;
