--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,10 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  background-image: url('./chalmers-shot.jpeg');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 a {
@@ -37,10 +41,27 @@ form div {
   width: 200px;
   padding-left: 10px;
   padding-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 3px 3px 3px;
+  border-radius: 3px;
+}
+
+.team-card-name {
+  color: #a7a7a7;
+  text-shadow: 2px 2px 2px black;
+}
+
+.team-card-small-header {
+  color: #a7a7a7;
+  text-shadow: 1px 1px 1px black;
+}
+
+.new-bracket-seed-line {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .new-bracket-team {
-  display: inline;
   margin: 10px;
 }
 
@@ -60,9 +81,44 @@ form div {
 .user-page-header {
   position: relative;
   margin-bottom: 60px;
+  background-color: rgba(255,255,255,0.8);
+  height: 100px;
+  box-shadow: 3px 3px 3px;
 }
 
 .user-page-header-name {
   position: absolute;
   left: 100px;
+}
+
+.user-page-brackets {
+  background-color: rgba(255,255,255,0.8);
+  width: 279px;
+  margin: 20px;
+  padding: 10px;
+  box-shadow: 3px 3px 3px;
+  margin: 20px 20px 65px 20px;
+}
+
+.user-bracket-field {
+  width: 421px;
+  background-color: rgba(255,255,255,0.8);
+  margin-right: 20px;
+  padding: 10px;
+  box-shadow: 3px 3px 3px;
+}
+
+.user-bracket-sidebar {
+  background-color: rgba(255,255,255,0.8);
+  padding: 10px;
+  left: 82%;
+  height: 586px;
+  box-shadow: 3px 3px 3px;
+}
+
+.build-submit {
+  position: fixed;
+  top: 90%;
+  left: 90%;
+  width: 85px;
 }
