--- a/public/style.css
+++ b/public/style.css
@@ -122,3 +122,35 @@ form div {
   left: 90%;
   width: 85px;
 }
+
+.credential-form {
+  background-color: rgba(255,255,255,0.8);
+  width: 320px;
+  position: absolute;
+  left: 50%;
+  margin-left: -160px;
+  top: 25%;
+  box-shadow: 3px 3px 3px black;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+#google-login-button {
+  height: 40px;
+  background-color: #dd493c;
+  font-size: 16px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px black;
+}
+
+#google-login-button a {
+  color: white;
+}
+
+#login-button {
+  height: 40px;
+  width: 60px;
+  font-size: 16px;
+  border-radius: 5px;
+  background-color: #e0e0e0;
+}
