--- a/public/style.css
+++ b/public/style.css
@@ -40,6 +40,7 @@ form div {
 .team-card {
   margin: 10px;
   width: 200px;
+  height: 425px;
   padding-left: 10px;
   padding-bottom: 10px;
   background-color: rgba(117, 117, 117, 0.8);
@@ -211,8 +212,17 @@ form div {
 
 #build-button {
   width: 189px;
-    position: absolute;
-    left: 50%;
-    margin-left: -90px;
-    top: 50%;
+  position: absolute;
+  left: 50%;
+  margin-left: -90px;
+  top: 50%;
+}
+
+.quick-rank {
+  overflow: hidden;
+  width: 100px;
+  position: relative;
+  top: -71px;
+  left: 60px;
+  text-shadow: none;
 }
