--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,7 @@ form div {
 .team-card {
   margin: 10px;
   width: 200px;
-  height: 480px;
+  /* height: 480px; */
   padding-left: 10px;
   padding-bottom: 10px;
   background-color: rgba(117, 117, 117, 0.8);
@@ -52,6 +52,16 @@ form div {
   border-radius: 3px;
   color: white;
   text-shadow: 2px 2px black;
+}
+
+.team-card-tall {
+  height: 480px;
+  /* transition: height .5s linear; */
+}
+
+.team-card-small {
+  height: 415px;
+  transition: height .5s linear;
 }
 
 .team-card-name {
