--- a/public/style.css
+++ b/public/style.css
@@ -180,6 +180,10 @@ form div {
   width: 85px;
 }
 
+#build-body {
+  display: flex;
+}
+
 .credential-form {
   background-color: rgba(255,255,255,1);
     width: 320px;
