--- a/public/style.css
+++ b/public/style.css
@@ -96,12 +96,44 @@ form div {
   top: 25%
 }
 
+
 .user-bracket-last-four {
   margin-bottom: 30px;
 }
 
 .user-bracket-bubble-burst {
   margin-top: 30px;
+}
+
+@media only screen and (max-width: 500px) {
+  .user-bracket-save {
+    display: inline;
+    margin: 0px;
+    position: inherit;
+  }
+
+  .user-bracket-field {
+    width: 300px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    box-shadow: 3px 3px 3px;
+    position: absolute;
+    left: 50%;
+    margin-left: -150px;
+    top: 13%;
+  }
+
+  .user-bracket-sidebar {
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    left: 50%;
+    height: 762px;
+    box-shadow: 3px 3px 3px;
+    width: 300px;
+    position: absolute;
+    margin-left: -150px;
+    top: 432%;
+  }
 }
 
 .user-page-header {
